@@ -1,4 +1,5 @@
 == (01/25/10)
+* Fixed the bug when uploading the same file for multiple file fields in the same form, the file gets overwritten.  Now, I prepend the form_field.id onto the front of the file name. (Tom Cocca)
 * Added the changelog file (Tom Cocca)
 
 == (01/23/10)
